# tinyland-cleanup

./: .bazelrc  .gitignore  .gitlab-ci.yml  AGENTS.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  SECURITY.md  flake.nix  go.mod  go.sum  main.go  main_test.go  plugins_darwin.go  plugins_other.go  report_text.go  state.go  state_test.go  volume_probe.go  volume_probe_test.go
.github/workflows/: ci.yml  gloriousflywheel-proof.yml  release.yml
.serena/: project.yml
config/: config.go  config_pbt_test.go  config_test.go  default.yaml
config/testdata/rapid/TestConfigRoundtrip/: TestConfigRoundtrip-20260202051749-919051.fail
daemon/: daemon.go  events.go  events_test.go  pool.go  pool_test.go  subscribers.go
docs/: bazel-cache-policy.md  darwin-dev-caches.md  nix-cleanup-policy.md  operator-workflow.md  podman-darwin-compaction.md  productionization-plan-2026-04-25.md  rpm-packaging.md  validation-status-2026-04-25.md  validation-status-2026-04-26.md
monitor/: disk.go  disk_test.go  monitor_pbt_test.go
otel/: otel.go  otel_config.go  otel_fallback.go  otel_health.go  otel_heartbeat.go  otel_metrics.go  otel_slog.go  otel_test.go  otel_traces.go
packaging/: nfpm.yaml
packaging/linux/: config.yaml
packaging/rpm/: postinstall.sh  postremove.sh
packaging/systemd/: tinyland-cleanup.service
pkg/fsops/: fsops.go  fsops_darwin.go  fsops_linux.go  fsops_test.go  fsops_unsupported.go  zero.go
plugins/: apfs_darwin.go  apfs_darwin_test.go  backup.go  bazel.go  bazel_test.go  cache.go  darwin.go  darwin_dev_cache_test.go  devartifacts.go  devartifacts_test.go  docker.go  etcd.go  exec_helpers.go  fs.go  github_runner.go  gitlab_runner.go  lima.go  lima_test.go  nix.go  nix_test.go  plugin.go  plugin_pbt_test.go  plugin_test.go  podman.go  podman_buildkit_test.go  podman_compaction_test.go  podman_test.go  preflight.go  registry.go  rke2.go  sudo.go  sudo_test.go  yum.go
