# =============================================================================
# BUILD.bazel - tinyland-cleanup Go application
# =============================================================================
# Cross-platform disk cleanup daemon with graduated thresholds.
#
# Usage:
#   bazel build //cmd/tinyland-cleanup:tinyland-cleanup
#   bazel run //cmd/tinyland-cleanup:tinyland-cleanup -- --help
#   bazel test //cmd/tinyland-cleanup/...
#
# Platform-specific builds:
#   bazel build --config=linux //cmd/tinyland-cleanup:tinyland-cleanup
#   bazel build --config=macos //cmd/tinyland-cleanup:tinyland-cleanup
# =============================================================================

load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

# =============================================================================
# Main Binary
# =============================================================================

go_binary(
    name = "tinyland-cleanup",
    srcs = ["main.go"] + select({
        "@platforms//os:macos": ["plugins_darwin.go"],
        "//conditions:default": ["plugins_other.go"],
    }),
    visibility = ["//visibility:public"],
    x_defs = {
        "main.version": "{STABLE_VERSION}",
        "main.commit": "{STABLE_GIT_COMMIT}",
        "main.date": "{BUILD_TIMESTAMP}",
    },
    deps = [
        ":config",
        ":daemon",
        ":monitor",
        ":otel",
        ":plugins",
    ],
)

# =============================================================================
# Libraries
# =============================================================================

go_library(
    name = "config",
    srcs = ["config/config.go"],
    importpath = "gitlab.com/tinyland/lab/tinyland-cleanup/config",
    visibility = ["//visibility:public"],
    deps = [
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_library(
    name = "plugins",
    srcs = [
        "plugins/backup.go",
        "plugins/cache.go",
        "plugins/devartifacts.go",
        "plugins/docker.go",
        "plugins/etcd.go",
        "plugins/fs.go",
        "plugins/github_runner.go",
        "plugins/gitlab_runner.go",
        "plugins/nix.go",
        "plugins/plugin.go",
        "plugins/podman.go",
        "plugins/preflight.go",
        "plugins/registry.go",
        "plugins/rke2.go",
        "plugins/sudo.go",
        "plugins/yum.go",
    ] + select({
        "@platforms//os:macos": [
            "plugins/darwin.go",
            "plugins/lima.go",
        ],
        "//conditions:default": [],
    }),
    importpath = "gitlab.com/tinyland/lab/tinyland-cleanup/plugins",
    visibility = ["//visibility:public"],
    deps = [
        ":config",
        ":fsops",
    ],
)

go_library(
    name = "monitor",
    srcs = ["monitor/disk.go"],
    importpath = "gitlab.com/tinyland/lab/tinyland-cleanup/monitor",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_shirou_gopsutil_v3//disk",
    ],
)

go_library(
    name = "fsops",
    srcs = [
        "pkg/fsops/fsops.go",
        "pkg/fsops/zero.go",
    ] + select({
        "@platforms//os:macos": ["pkg/fsops/fsops_darwin.go"],
        "@platforms//os:linux": ["pkg/fsops/fsops_linux.go"],
        "//conditions:default": ["pkg/fsops/fsops_unsupported.go"],
    }),
    importpath = "gitlab.com/tinyland/lab/tinyland-cleanup/pkg/fsops",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_x_sys//unix",
    ],
)

go_library(
    name = "daemon",
    srcs = [
        "daemon/daemon.go",
        "daemon/events.go",
        "daemon/pool.go",
        "daemon/subscribers.go",
    ],
    importpath = "gitlab.com/tinyland/lab/tinyland-cleanup/daemon",
    visibility = ["//visibility:public"],
    deps = [
        ":config",
        ":plugins",
    ],
)

go_library(
    name = "otel",
    srcs = [
        "otel/otel.go",
        "otel/otel_config.go",
        "otel/otel_fallback.go",
        "otel/otel_health.go",
        "otel/otel_heartbeat.go",
        "otel/otel_metrics.go",
        "otel/otel_slog.go",
        "otel/otel_traces.go",
    ],
    importpath = "gitlab.com/tinyland/lab/tinyland-cleanup/otel",
    visibility = ["//visibility:public"],
    deps = [
        ":config",
    ],
)

# =============================================================================
# Tests
# =============================================================================

go_test(
    name = "config_test",
    srcs = [
        "config/config_test.go",
        "config/config_pbt_test.go",
    ],
    embed = [":config"],
    deps = [
        "@net_pgregory_rapid//:rapid",
    ],
    timeout = "short",
)

go_test(
    name = "plugins_test",
    srcs = [
        "plugins/plugin_test.go",
        "plugins/plugin_pbt_test.go",
    ],
    embed = [":plugins"],
    deps = [
        ":config",
        "@net_pgregory_rapid//:rapid",
    ],
    timeout = "short",
)

go_test(
    name = "monitor_test",
    srcs = [
        "monitor/disk_test.go",
        "monitor/monitor_pbt_test.go",
    ],
    embed = [":monitor"],
    deps = [
        "@net_pgregory_rapid//:rapid",
    ],
    timeout = "short",
)

go_test(
    name = "fsops_test",
    srcs = ["pkg/fsops/fsops_test.go"],
    embed = [":fsops"],
    timeout = "short",
)

go_test(
    name = "daemon_test",
    srcs = [
        "daemon/events_test.go",
        "daemon/pool_test.go",
    ],
    embed = [":daemon"],
    deps = [
        ":config",
        ":plugins",
    ],
    timeout = "short",
)

go_test(
    name = "otel_test",
    srcs = ["otel/otel_test.go"],
    embed = [":otel"],
    deps = [
        ":config",
    ],
    timeout = "short",
)

# =============================================================================
# Test Suites
# =============================================================================

# All platform-agnostic tests (safe to run on any CI runner)
test_suite(
    name = "all_tests",
    tests = [
        ":config_test",
        ":daemon_test",
        ":fsops_test",
        ":monitor_test",
        ":otel_test",
        ":plugins_test",
    ],
)

# Linux-specific test suite
test_suite(
    name = "linux_tests",
    tests = [
        ":config_test",
        ":daemon_test",
        ":fsops_test",
        ":monitor_test",
        ":otel_test",
        ":plugins_test",
    ],
)

# Darwin test suite (includes Darwin-specific tests when available)
test_suite(
    name = "darwin_tests",
    tests = [
        ":config_test",
        ":daemon_test",
        ":fsops_test",
        ":monitor_test",
        ":otel_test",
        ":plugins_test",
    ],
)

# Property-based test suite (uses rapid library)
test_suite(
    name = "pbt_tests",
    tests = [
        ":config_test",
        ":daemon_test",
        ":fsops_test",
        ":monitor_test",
        ":otel_test",
        ":plugins_test",
    ],
)
