load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

# Root Bazel targets for tinyland-cleanup.
#
# Preferred commands:
#   bazel build //...
#   bazel test //...
#   bazel run //:tinyland-cleanup -- --dry-run --config ./config/default.yaml
#
# gazelle:prefix github.com/Jesssullivan/tinyland-cleanup

gazelle(name = "gazelle")

go_binary(
    name = "tinyland-cleanup",
    embed = [":tinyland-cleanup_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "main.commit": "{STABLE_GIT_COMMIT}",
        "main.date": "{BUILD_TIMESTAMP}",
        "main.version": "0.2.0",
    },
)

go_library(
    name = "tinyland-cleanup_lib",
    srcs = [
        "main.go",
        "report_text.go",
        "state.go",
    ] + select({
        "@platforms//os:macos": ["plugins_darwin.go"],
        "//conditions:default": ["plugins_other.go"],
    }),
    importpath = "github.com/Jesssullivan/tinyland-cleanup",
    visibility = ["//visibility:private"],
    deps = [
        ":config",
        ":monitor",
        ":plugins",
    ],
)

go_test(
    name = "tinyland-cleanup_test",
    srcs = [
        "main_test.go",
        "state_test.go",
    ],
    embed = [":tinyland-cleanup_lib"],
    deps = [
        ":config",
        ":monitor",
        ":plugins",
    ],
)

go_library(
    name = "config",
    srcs = ["config/config.go"],
    importpath = "github.com/Jesssullivan/tinyland-cleanup/config",
    visibility = ["//visibility:public"],
    deps = ["@in_gopkg_yaml_v3//:yaml_v3"],
)

go_test(
    name = "config_test",
    srcs = [
        "config/config_pbt_test.go",
        "config/config_test.go",
    ],
    embed = [":config"],
    deps = ["@net_pgregory_rapid//:rapid"],
)

go_library(
    name = "monitor",
    srcs = ["monitor/disk.go"],
    importpath = "github.com/Jesssullivan/tinyland-cleanup/monitor",
    visibility = ["//visibility:public"],
    deps = ["@com_github_shirou_gopsutil_v3//disk"],
)

go_test(
    name = "monitor_test",
    srcs = [
        "monitor/disk_test.go",
        "monitor/monitor_pbt_test.go",
    ],
    embed = [":monitor"],
    deps = ["@net_pgregory_rapid//:rapid"],
)

go_library(
    name = "plugins",
    srcs = [
        "plugins/bazel.go",
        "plugins/cache.go",
        "plugins/devartifacts.go",
        "plugins/docker.go",
        "plugins/etcd.go",
        "plugins/fs.go",
        "plugins/gitlab_runner.go",
        "plugins/nix.go",
        "plugins/plugin.go",
        "plugins/podman.go",
        "plugins/rke2.go",
        "plugins/sudo.go",
    ] + select({
        "@platforms//os:macos": [
            "plugins/apfs_darwin.go",
            "plugins/darwin.go",
            "plugins/lima.go",
        ],
        "//conditions:default": [
            "plugins/github_runner.go",
            "plugins/yum.go",
        ],
    }),
    importpath = "github.com/Jesssullivan/tinyland-cleanup/plugins",
    visibility = ["//visibility:public"],
    deps = [
        ":config",
    ],
)

go_test(
    name = "plugins_test",
    srcs = [
        "plugins/bazel_test.go",
        "plugins/devartifacts_test.go",
        "plugins/nix_test.go",
        "plugins/podman_compaction_test.go",
        "plugins/plugin_pbt_test.go",
        "plugins/plugin_test.go",
        "plugins/sudo_test.go",
    ] + select({
        "@platforms//os:macos": [
            "plugins/apfs_darwin_test.go",
            "plugins/darwin_dev_cache_test.go",
        ],
        "//conditions:default": [],
    }),
    embed = [":plugins"],
    deps = [
        ":config",
        "@net_pgregory_rapid//:rapid",
    ],
)

test_suite(
    name = "all_tests",
    tests = [
        ":config_test",
        ":monitor_test",
        ":tinyland-cleanup_test",
        ":plugins_test",
    ],
)
