# Bzlmod root for tinyland-cleanup.
#
# Nix remains the packaging authority; Bazel is the hermetic build/test graph
# and the surface that can attach to GloriousFlywheel shared cache runners.

module(
    name = "tinyland_cleanup",
    version = "0.2.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "gazelle", version = "0.37.0")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_cc", version = "0.0.10")
bazel_dep(name = "rules_go", version = "0.46.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_shirou_gopsutil_v3",
    "in_gopkg_yaml_v3",
    "net_pgregory_rapid",
)
